--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "deshop-client": "file:",
     "framer-motion": "^12.6.3",
     "jose": "^6.0.10",
